# hs-advent2017

./: .ghci  .gitignore  LICENSE  README.md  hs-advent2017.cabal  stack.yaml
app/: Main.hs
src/: AOCommon.hs  Dec01.hs  Dec02.hs  Dec03.hs  Dec04.hs  Dec05.hs  Dec06.hs  Dec07.hs  Dec08.hs  Dec09.hs  Dec10.hs  Dec11.hs  Dec12.hs  Dec13.hs  Dec14.hs  Dec15.hs  Dec16.hs  Dec17.hs  Dec18.hs  Dec19.hs  Dec20.hs  Dec21.hs  Dec22.hs  Dec23.hs  Dec24.hs  Dec25.hs  day07input1.txt  day08input1.txt  day11input1.txt  day12input1.txt  day13input1.txt  day18input1.txt  day19input1.txt  day20input1.txt  day21input1.txt  day22input1.txt  day24input1.txt  day25input1.txt
