name:                hs-advent2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/pechersky/hs-advent2017#readme
license:             BSD3
license-file:        LICENSE
author:              Yakov Pechersky
maintainer:          yakov@pechersky.us
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/pechersky/hs-advent2017#readme>

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , parsec
                     , transformers
                     , vector
                     , lens
                     , split
                     , linear
  default-language:    Haskell2010

executable hs-advent2017-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-advent2017
                     , criterion
  default-language:    Haskell2010

test-suite hs-advent2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-advent2017
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pechersky/hs-advent2017
